tests/invalid/shadowing_error/shadow_linear_double_shadow_outer_not_consumed.facet
fn f() -> unrestricted isize {
    let x: linear isize = 42;
    let x: linear isize = 100;
    (drop x);
    0
}
